# Shadow-Nexus

./: .cursor.json  .cursorrules  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .lintstagedrc  @lessons-learned.md  @memories.md  CHANGELOG.md  CONTRIBUTING.md  COVENANT.md  DIAGNOSIS.md  PR_DESCRIPTION.md  README.md  RULESFORAI.md  SECURITY.md  THE_LAST_WHISPER.md  amplify.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  test-db.js  tsconfig.json
"b/: LICENSE.v\342\210\236"
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  umbrella-ci.yml
.well-known/: mcp.json
AthenaMist/: __init__.py  core.py
Command_Network/: __init__.py
Command_Network/handlers/: discord_handler.py  email_handler.py  telegram_handler.py
Core_Control/: __init__.py  command_router.py  main.py  message_processor.py  signature_verifier.py
Phantom/: __init__.py  core.py
SovereignCore/: __init__.py  core.py
deploy/: render.yaml
docs/: ADR-0001-foundations.md  QUICKSTART.md
migrations/: 20240806_add_conditional_execution.js  20240806_add_template_fields.js  20240806_create_audit_logs.js
src/bot/: index.js
src/bot/commands/: _baseCommand.js  council-report.js
src/bot/events/: interactionCreate.js  messageCreate.js  ready.js
src/bot/utils/: commandHandler.js
src/config/: logger.js
src/models/: athenaLog.js  auditLog.js  command_log.js  index.js  scheduledNote.js  server.js  webhook.js
src/modules/: broadcast.js  councilReport.js  guardianBridge.js
src/services/: athenaLogger.js  athenaWebhookService.js  auditService.js  database.js  healthMonitor.js  schedulerService.js  templateService.js  webhookQueueService.js  webhookService.js
src/utils/: conditionParser.js  logger.js
templates/: healthEndpoint.js
tests/: test_command_handlers.py
(+12 files in other folders)
